Started Building up

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="shortcut icon" href="./favicon_io/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
-    <h1>HEllo welcome difgrfdfhihudsfhuhuadsudhu</h1>
+    <div class="container">
+        <!-- Hero section -->
+        <section class="section__page wrapper__hero">
+            <img src="./app/kel.jfif" alt="kel">
+            
+        </section>
+    </div>
+   <script src="./dist/minJs/index.js"></script>
 </body>
 </html>
