Changes are pushed to  branch__2023-01-14_20-44-42

--- a/index.html
+++ b/index.html
@@ -7,13 +7,43 @@
     <title>Kelvin Githu</title>
     <link rel="stylesheet" href="./dist/css/main.css">
     <link rel="shortcut icon" href="./favicon_io/favicon-32x32.png" type="image/x-icon">
+    <!-- Fontawesome link -->
+    <script src="https://kit.fontawesome.com/f1deb10f83.js" crossorigin="anonymous"></script>\
+
 </head>
 <body>
     <div class="container">
         <!-- Hero section -->
         <section class="section__page wrapper__hero">
-            <img src="./app/kel.jfif" alt="kel">
-            
+            <img src="./app/photo_2023-01-11_15-24-59.jpg" alt="kel">
+            <div class="bio">
+                <p class="bio__para">
+                  Software developer ,Student,Ethical Hacker  
+                </p>
+                <p class="bio__email">👉 <a href="mailto:kelvingithu019@gmail.com ">kelvingithu019@gmail.com</a></p>
+                <p class="bio__website">🌐 <a href="kelvingithu.com">kelvingithu.com</a></p>
+            </div>
+        </section>
+
+        <section class="section__page">
+            <div class="socials__list">
+                <a href="https://www.instagram.com/fuul_developer/" target="_blank"><i class="fa-brands fa-square-instagram"></i>Instagram</a>
+                <a href="https://www.linkedin.com/in/kelvingithu/" target="_blank"><i class="fa-brands fa-linkedin"></i>Linked In</a>
+                <a href="https://twitter.com/KelvinGithu" target="_blank"><i class="fa-brands fa-square-twitter"></i>Twitter</a>
+                <a href="https://dev.to/githukelvin" target="_blank"><i class="fa-brands fa-dev"></i>Dev.to</a>
+                <a href="https://www.frontendmentor.io/profile/githukelvin" target="_blank"><i class="fa-solid fa-code"></i>Frontend Mentor</a>
+                <a href="./KELVIN  GITHU MAINA RESUME.pdf"><i class="fa-solid fa-download"></i>Download Resume</a>
+                   
+            </div>
+        </section>
+        <section class="section__page">
+            <h2>Skills and Qualifications</h2>
+            <ul>
+                <li>1 Year experience with front & backend developmeny</li>
+                <li>Extensive knowledge in SASS/SCSS & PHP</li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
     </div>
    <script src="./dist/minJs/index.js"></script>
