--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link rel="shortcut icon" href="./favicon_io/favicon-32x32.png" type="image/x-icon">
     <!-- Fontawesome link -->
     <script src="https://kit.fontawesome.com/f1deb10f83.js" crossorigin="anonymous"></script>\
-
+    <!-- Link to open sans fonts -->
+    <link rel="preload" href="./app/asset/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./app/asset/OpenSans-ExtraBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./app/asset/OpenSans-Medium.woff2 as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./app/asset/OpenSans-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./app/asset/OpenSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 <body>
     <div class="container">
@@ -39,12 +44,15 @@
         <section class="section__page">
             <h2>Skills and Qualifications</h2>
             <ul>
-                <li>1 Year experience with front & backend developmeny</li>
-                <li>Extensive knowledge in SASS/SCSS & PHP</li>
-                <li></li>
-                <li></li>
+                <li><span>✔</span> 1.5yrs Year experience with front & backend development</li>
+                <li><span>✔</span> Extensive knowledge in SASS/SCSS,JavaScript & PHP</li>
+                <li><span>✔</span> Experienced on 3D graphics design</li>
+                <li><span>✔</span> Experienced on tutoring and training</li>
             </ul>
         </section>
+        <div class="hello">
+            p
+        </div>
     </div>
    <script src="./dist/minJs/index.js"></script>
 </body>
